--- a/.gitignore
+++ b/.gitignore
@@ -21051,3 +21051,4 @@
 0x00-ES6_basic/node_modules/yocto-queue/license
 0x00-ES6_basic/node_modules/yocto-queue/package.json
 0x00-ES6_basic/node_modules/yocto-queue/readme.md
+0x00-ES6_basic/node_modules/.cache/@babel/register/.babel.7.23.7.development.json
